# dnscacher

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/dnscache/: __main__.py  commands.py  debug.txt  domains.py  enums.py  exceptions.py  formatter.py  ips.py  ipset.py  logger.py  mappings.py  parser.py  paths.py  printer.py  settings.py
src/dnscacher/: __main__.py  commands.py  domains.py  helpers.py  ips.py  ipset.py  logger.py  mappings.py  parser.py  resolve.py  settings.py
tests/: cases.py  test_domains.py  test_formatter.py  test_helpers.py  test_ipset.py  test_mappings.py  test_parser.py  test_settings.py
